# suppa

./: README.md
suplistml/: .gitignore  AGENTS.md  build.py  pyproject.toml
suplistml/src/suplistml/: script.py
suplistml/src/suplistml/data/: lfs.py  llm.py  mistral-7b-instruct-v0.2-code-ft.Q5_K_M.gguf  nyt-ingredients-snapshot-2015.csv  nyt.py  nyt_full_synthetic+model=gemini25flash0417.2025apr26.json  nyt_llm_categories+model=mistral7b+prompt=icl.2024jan29.json  recipe_nlg.py  synthetic.py
suplistml/src/suplistml/data/recipe_nlg/: full_dataset.csv
suplistml/src/suplistml/dataset/: multi_dataset.py
suplistml/src/suplistml/model/: multi_bert.py  quant.py  tokenizer.py  train.py
suplistml/src/suplistml/models/run+1733494653/: class_tokenizer.json  config.json  model.safetensors  tokenizer.json
suplistml/src/suplistml/models/run+1748084792/: class_tokenizer.json  config.json  model.safetensors  tag_tokenizer.json
suplistml/src/suplistml/models/run+1772630896/: config.json  model.safetensors
suplistml/src/suplistml/models/run+1772799649/: class_tokenizer.json  model.safetensors  model_w8.safetensors  tag_tokenizer.json
suplistml/tests/test_suplistml/: __init__.py  test_script.py
suplistml/tests/test_suplistml/data/: test_lfs.py  test_llm.py  test_nyt.py  test_recipe_nlg.py  test_synthetic.py
suplistml/tests/test_suplistml/dataset/: test_multi_dataset.py
suplistml/tests/test_suplistml/model/: test_multi_bert.py  test_tokenizer.py
suplistmlrs/: .gitignore  Cargo.toml  Justfile
suplistmlrs/src/: bert.rs  combiner.rs  lib.rs  main.rs  model.rs
(+19 files in other folders)
