[package]
name = "suplistmlrs"
version = "0.1.0"
edition = "2021"
authors = ["Chad Voegele"]
license = "GPL-2.0"
license-file = "LICENSE"

[dependencies]
candle-core = { version = "0.8.0"}
candle-nn = { version = "0.8.0"}
candle-transformers = { version = "0.8.0"}
serde = "1.0.215"
serde_json = "1.0.132"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
tokenizers = { version = "0.21.0", default-features = false, features = ["unstable_wasm"] }
